deploy1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ivis-vms-deployment1
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ivis-vms
      instance: instance1
  template:
    metadata:
      labels:
        app: ivis-vms
        instance: instance1
    spec:
      containers:
      - name: ivis-vms-container
        image: sharonraju143/ivis_vms
        ports:
        - containerPort: 80
