service2.yml
apiVersion: v1
kind: Service
metadata:
  name: ivis-vms-service2
  namespace: default
spec:
  selector:
    app: ivis-vms
    instance: instance2
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
